--- a/stories/it/0337_bambini-di-cera_slides.html
+++ b/stories/it/0337_bambini-di-cera_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Tingi y las vacas - Global African Storybook</title>
+  <title>Bambini di Cera. - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="tingi-y-las-vacas" class="slide level1">
-<h1>Tingi y las vacas</h1>
+<section id="bambini-di-cera." class="slide level1">
+<h1>Bambini di Cera.</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi vivía con su abuela.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
+<p>C'era una volta una famiglia che viveva felice</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>Cuidaba a las vacas con ella.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
+<p>Non litigavano mai fra di loro. I bambini aiutavano i loro genitori a casa e nei campi</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>Un día llegaron los soldados.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
+<p>Ma non erano autorizzati ad avvicinarsi al fuoco.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>Se llevaron las vacas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
+<p>Dovevano fare tutti i loro lavori durante la notte. Perchè erano fatti di cera!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>Tingi y su abuela huyeron para esconderse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
+<p>Ma uno dei ragazzi sognava di uscire fuori alla luce del sole.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
-<p>Se escondieron en el monte hasta la noche.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
+<p>Un giorno il sogno fu troppo forte. I suoi fratelli cercarono di avvertirlo...</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>Pero los soldados regresaron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
+<p>Ma era troppo tardi! Si sciolse al caldo sole.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>La abuela tomó a Tingi y lo escondió debajo de las hojas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
+<p>I bimbi di cera erano troppo tristi di vedere il loro fratello sciogliersi via.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>Uno de los soldados puso su pie directamente sobre él, pero Tingi se quedó en silencio.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
+<p>Perciò fecero un piano. Modellarono la massa di cera sciolta a forma di uccello.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Cuando estuvieron a salvo, Tingi y su abuela salieron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
+<p>Portarono il fratello uccello in alto su una montagna.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>Se escurrieron a casa muy tranquilamente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
+<p>E quando il sole sorse, questo volò via cantando alla luce del mattino.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="tingi-y-las-vacas-1">Tingi y las vacas</h2>
-<strong>Texto:</strong> Ingrid Schechter<br> <strong>Ilustración:</strong> Ingrid Schechter<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
+<h2 id="bambini-di-cera.-1">Bambini di Cera.</h2>
+<strong>Text:</strong> Southern African Folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tingi-and-cows'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/children-wax'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
