--- a/stories/it/0262_magozwe_slides.html
+++ b/stories/it/0262_magozwe_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Tingi y las vacas - Global African Storybook</title>
+  <title>Magozwe - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="tingi-y-las-vacas" class="slide level1">
-<h1>Tingi y las vacas</h1>
+<section id="magozwe" class="slide level1">
+<h1>Magozwe</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi vivía con su abuela.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
+<p>Nella affollata città di Nairobi, lontano da un'amorevole vita in casa, viveva un gruppo di ragazzi senza tetto. Vivevano alla giornata. Ogni mattina, impacchettavano i loro materassi dopo aver dormito sui freddi pavimenti. Per scaldarsi un po', accendevano fuochi nei bidoni nella spazzatura. In questo gruppo di ragazzi c'era anche Magozwe. Lui era il più giovane.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>Cuidaba a las vacas con ella.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
+<p>Quando i genitori di Magozwe morirono, lui aveva solo cinque anni. Andò a vivere con suo zio. A quell'uomo non importava nulla del ragazzo. Non dava a Magozwe abbastanza cibo. Lo faceva lavorare troppo.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>Un día llegaron los soldados.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
+<p>Se Magozwe si lamentava o rispondeva, lui lo picchiava. Quando Magozwe chiese se poteva andare a scuola, suo zio lo picchiò e gli disse: &quot;Sei troppo stupido per imparare qualcosa!&quot; Dopo tre anni di trattamenti di questo genere, Magozwe scappò dallo zio e iniziò vivere per le strade.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>Se llevaron las vacas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
+<p>La vita da strada era difficile e la maggior parte dei ragazzi faticava ogni giorno anche a trovare solo del cibo. A volte venivano arrestati, altre venivano picchiati. Quando si ammalavano, non avevano nessuno ad aiutarli. Il gruppo dipendeva dai pochi soldi che ottenevano mendicando e vendendo oggetti di plastica e altri riciclati. La loro vita veniva resa ancora più difficile dalle lotte con i gruppi rivali che volevano il controllo di parti delle città.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>Tingi y su abuela huyeron para esconderse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
+<p>Un giorno, mentre Magozwe frugava nel bidone della spazzatura, trovò un vecchio libro di storie. Lo pulì dalla sporcizia e lo mise nel suo zaino. Nei giorni seguenti, Magozwe tirava fuori il libro per guardare le sue figure, ma non sapeva leggerne le parole.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
-<p>Se escondieron en el monte hasta la noche.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
+<p>Le figure raccontavano la storia di un ragazzo che crebbe per diventare un pilota. Magozwe sognava ad occhi aperti di essere un pilota. A volte immaginava di essere il ragazzo della storia.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>Pero los soldados regresaron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
+<p>Faceva freddo e Magozwe era in mezzo alla strada a mendicare. Un uomo si avvicinò. &quot;Ciao, sono Thomas. Lavoro qui vicino, in un posto dove puoi mangiare qualcosa&quot; disse l'uomo. Indicò una casa gialla con un tetto blu. &quot;Spero verrai lì a mangiare qualcosa..?&quot; chiese. Magozwe guardò l'uomo e poi la casa. &quot;Forse&quot; rispose, e se ne andò.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>La abuela tomó a Tingi y lo escondió debajo de las hojas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
+<p>Col passare dei mesi, i ragazzi senzatetto si abituarono a vedere Thomas in giro. Gli piaceva parlare con la gente di strada. Thomas ascoltava le storie di vita della gente. Era serio e paziente, mai maleducato e irrispettoso. Alcuni dei ragazzi cominciarono ad andare alla casa gialla dal tetto blu per mangiare a mezzogiorno.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>Uno de los soldados puso su pie directamente sobre él, pero Tingi se quedó en silencio.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
+<p>Magozwe era seduto sul pavimento a guardare il suo libro di figure, quando Thomas si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese. &quot;Di un ragazzo che diventa un pilota&quot; Rispose Magozwe. &quot;Qual'è il nome del ragazzo?&quot; Chiese Thomas &quot;Non lo so, non so leggere&quot; Disse Magozwe sottovoce.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Cuando estuvieron a salvo, Tingi y su abuela salieron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
+<p>Quando si conobbero, Magozwe cominciò a raccontare la propria storia a Thomas. La storia di suo zio e di come lui scappò via. Thomas non parlò molto e non disse a Magozwe cosa fare, ma lui ascoltò sempre attentamente. Alcune volte parlavano mentre mangiavano nella casa dal tetto blu.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>Se escurrieron a casa muy tranquilamente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
+<p>Intorno al decimo compleanno di Magozwe, Thomas gli regalò un nuovo libro di storie. Era la storia di un ragazzo di villaggio che crebbe per diventare un famoso calciatore. Thomas gli lesse la storia tante volte, fino a che un giorno disse: &quot;Credo sia ora che tu vada a scuola e impari a leggere. Che ne dici?&quot; Thomas spiegò che lui conosceva un posto dove i bimbi potevano vivere e andare a scuola.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="tingi-y-las-vacas-1">Tingi y las vacas</h2>
-<strong>Texto:</strong> Ingrid Schechter<br> <strong>Ilustración:</strong> Ingrid Schechter<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
+<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio aveva ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. &quot;Forse è meglio che rimango a vivere per strada&quot; Pensò.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
+<p>Condivise le sue paure con Thomas. Con il tempo, l'uomo rassicurò il ragazzo sul fatto che la vita sarebbe stata migliore in quel posto nuovo.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
+<p>Così, Magozwe si trasferì in una stanza in una casa dal tetto verde. Condivise la stanza con altri due ragazzi. Nell'insieme, vivevano dieci ragazzi in quella casa. Insieme a Zia Cissy e suo marito, tre cani, un gatto e una vecchia capra.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
+<p>Magozwe cominciò ad andare a scuola, ed era difficile. Doveva recuperare molto. A volte avrebbe voluto arrendersi. Ma poi pensò al pilota e al calciatore delle storie. Come loro, non si arrese.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
+<p>Magozwe era seduto nel giardino della casa dal tetto verde, a leggere un libro di storie della scuola. Thomas lo raggiunse e si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese Thomas. &quot;Di un ragazzo che diventa insegnante.&quot; Rispose Magozwe. &quot;Come si chiama il ragazzo?&quot; Chiese Thomas. &quot;Il suo nome è Magozwe.&quot; disse Magozwe sorridendo.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="magozwe-1">Magozwe</h2>
+<strong>Text:</strong> Lesley Koyi<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tingi-and-cows'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/magozwe-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
