--- a/stories/it/0327_contando-gli-animali_slides.html
+++ b/stories/it/0327_contando-gli-animali_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Tingi y las vacas - Global African Storybook</title>
+  <title>Contando gli Animali - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="tingi-y-las-vacas" class="slide level1">
-<h1>Tingi y las vacas</h1>
+<section id="contando-gli-animali" class="slide level1">
+<h1>Contando gli Animali</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi vivía con su abuela.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
+<p>Un elefante va a bere l'acqua.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>Cuidaba a las vacas con ella.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
+<p>Due giraffe vanno a bere l'acqua.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>Un día llegaron los soldados.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
+<p>Tre bufali e quattro uccellini vanno a bere l'acqua anche loro.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>Se llevaron las vacas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
+<p>Cinque impala e sei facoceri si dirigono verso l'acqua.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>Tingi y su abuela huyeron para esconderse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
+<p>Sette zebre corrono verso l'acqua.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
-<p>Se escondieron en el monte hasta la noche.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
+<p>Otto rane e nove pesci nuotano nell'acqua.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>Pero los soldados regresaron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
+<p>Un leone ruggisce. Anche lui vuole bere. Chi ha paura del leone?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>La abuela tomó a Tingi y lo escondió debajo de las hojas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
+<p>Un elefante beve acqua insieme al leone.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,39 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>Uno de los soldados puso su pie directamente sobre él, pero Tingi se quedó en silencio.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Cuando estuvieron a salvo, Tingi y su abuela salieron.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>Se escurrieron a casa muy tranquilamente.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="tingi-y-las-vacas-1">Tingi y las vacas</h2>
-<strong>Texto:</strong> Ingrid Schechter<br> <strong>Ilustración:</strong> Ingrid Schechter<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
+<h2 id="contando-gli-animali-1">Contando gli Animali</h2>
+<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tingi-and-cows'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/counting-animals'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
