--- a/stories/it/0342_punizione_slides.html
+++ b/stories/it/0342_punizione_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Tingi y las vacas - Global African Storybook</title>
+  <title>Punizione - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="tingi-y-las-vacas" class="slide level1">
-<h1>Tingi y las vacas</h1>
+<section id="punizione" class="slide level1">
+<h1>Punizione</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>Tingi vivía con su abuela.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p>Un giorno, mamma raccolse molta frutta.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>Cuidaba a las vacas con ella.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p>&quot;Possiamo avere un po' di frutta?&quot; Chiedemmo. &quot;Mangeremo la frutta stasera.&quot; Disse mamma.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>Un día llegaron los soldados.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p>Mio fratello Rahim era molto ingordo. Assaggiò tutta la frutta. Mangiò molta di essa.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>Se llevaron las vacas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p>&quot;Guarda cosa ha fatto Rahim!&quot; gridò il mio fratellino più piccolo. &quot;Rahim è monello ed egoista!&quot; Dissi io.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>Tingi y su abuela huyeron para esconderse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p>Mamma si arrabbiò con Rahim.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
-<p>Se escondieron en el monte hasta la noche.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p>Anche noi eravamo arrabbiati con Rahim, ma lui non si sentiva in colpa.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>Pero los soldados regresaron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p>&quot;Non punirai Rahim?&quot; Chiese il mio fratellino.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>La abuela tomó a Tingi y lo escondió debajo de las hojas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p>&quot;Rahim, presto te ne pentirai&quot; Avvertì la mamma.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>Uno de los soldados puso su pie directamente sobre él, pero Tingi se quedó en silencio.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p>Rahim cominciò a sentirsi male.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>Cuando estuvieron a salvo, Tingi y su abuela salieron.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p>&quot;Mi fa malissimo la pancia&quot; Bisbigliò Rahim.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>Se escurrieron a casa muy tranquilamente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p>Mamma sapeva che questo sarebbe successo. La frutta stava punendo Rahimi!</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,21 @@
 </section>
 <section class="slide level1">
 
-<h2 id="tingi-y-las-vacas-1">Tingi y las vacas</h2>
-<strong>Texto:</strong> Ingrid Schechter<br> <strong>Ilustración:</strong> Ingrid Schechter<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p>Più tardi, Rahim chiese scusa a tutti noi. &quot;Non sarò più così ingordo&quot; Promise. E noi tutti gli credemmo.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="punizione-1">Punizione</h2>
+<strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tingi-and-cows'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/punishment'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
