--- a/stories/index.html
+++ b/stories/index.html
@@ -2014,6 +2014,18 @@
       <td><a name="it0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0291</td>
+      <td><a href="/stories/it/0291_cosa-disse-la-sorella-di-vusi_slides.html" target="_blank">Cosa disse la sorella di Vusi</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/it/0294_le-banane-della-nonna_slides.html" target="_blank">Le Banane della Nonna</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0296</td>
       <td><a href="/stories/it/0296_tom-il-venditore-di-banane_slides.html" target="_blank">Tom il venditore di banane</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4991,7 +5003,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -5003,7 +5015,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#tl0294">tl</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
