--- a/stories/index.html
+++ b/stories/index.html
@@ -2038,6 +2038,12 @@
       <td><a name="it0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0315</td>
+      <td><a href="/stories/it/0315_la-canzone-di-sakima_slides.html" target="_blank">La canzone di Sakima</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0327</td>
       <td><a href="/stories/it/0327_contando-gli-animali_slides.html" target="_blank">Contando gli Animali</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5057,7 +5063,7 @@
       <td>0315</td>
       <td><a href="http://africanstorybook.org/stories/sakima%E2%80%99s-song">Sakima’s song</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
+      <td><a href="#ar0315">ar</a>, <a href="#es0315">es</a>, <a href="#fa0315">fa</a>, <a href="#it0315">it</a>, <a href="#ko0315">ko</a>, <a href="#pa0315">pa</a>, <a href="#tl0315">tl</a>, <a href="#zh0315">zh</a></td>
     </tr>
     <tr>
       <td>0319</td>
