--- a/stories/index.html
+++ b/stories/index.html
@@ -91,6 +91,7 @@
 <li class="toc"><a href="#norwegian-nynorsk">Norwegian (Nynorsk) [nynorsk]</a></li><br>
 <li class="toc"><a href="#odia">Odia [ଓଡ଼ିଆ]</a></li><br>
 <li class="toc"><a href="#persian">Persian [فارسی]</a></li><br>
+<li class="toc"><a href="#polish">Polish [Polski]</a></li><br>
 <li class="toc"><a href="#punjabi">Punjabi [ਪੰਜਾਬੀ]</a></li><br>
 <li class="toc"><a href="#russian">Russian [Русский]</a></li><br>
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
@@ -3166,6 +3167,27 @@
 </table>
 
    </ul>
+  <h3><a name='polish'>Polish [Polski]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0001</td>
+      <td><a href="/stories/pl/0001_bardzo-wysoki-człowiek_slides.html" target="_blank">Bardzo Wysoki Człowiek</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pl0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
   <h3><a name='punjabi'>Punjabi [ਪੰਜਾਬੀ]</a></h3>
    <ul><table>
   <thead>
@@ -4547,7 +4569,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#bn0001">bn</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#bn0001">bn</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#pl0001">pl</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
