--- a/stories/it/0324_il-giorno-che-lasciai-casa-per-la-città_slides.html
+++ b/stories/it/0324_il-giorno-che-lasciai-casa-per-la-città_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Bardzo Wysoki Człowiek - Global African Storybook</title>
+  <title>Il giorno che lasciai casa per la città - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="bardzo-wysoki-człowiek" class="slide level1">
-<h1>Bardzo Wysoki Człowiek</h1>
+<section id="il-giorno-che-lasciai-casa-per-la-città" class="slide level1">
+<h1>Il giorno che lasciai casa per la città</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>Jego motyka była za krótka.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p>La piccola fermata d'autobus nel mio villaggio era molto movimentata, con tanta gente e autobus stracarichi. Per terra c'erano addirittura altre valigie e bagagli da caricare. I bagarini urlavano le destinazioni degli autobus.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>Jego wejście do domu było za niskie.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p>&quot;Città! Città! Direzione West!&quot; Udii un bagarino urlare. Quello era l'autobus che dovevo prendere.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>Jego lóżko było za krótkie.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p>L'autobus per la città era quasi pieno, ma c'era ancora gente che spingeva per salirci. Alcuni avevano messo il bagaglio nel bagagliaio dell'autobus. Altri li mettevano sulle cappelliere dentro.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>Jego rower był za niski.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p>I nuovi passeggeri obliterarono i loro biglietti mentre cercavano un posto per sedersi sull'autobus sovraffollato. Le donne mettevano comodi i loro giovani bimbi, in preparazione al lungo viaggio.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>Ten człowiek był po prostu za wysoki!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p>Mi schiacciai di fianco al finestrino. L'uomo di fianco a me teneva stretto a sé un sacchetto verde. Indossava vecchi sandali, un cappotto usato e pareva molto nervoso.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>Zrobił bardzo długą motykę.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p>Guardai fuori dall'autobus e realizzai che stavo lasciando il mio villaggio, il posto dove ero cresciuto. Stavo andando nella grande città.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>Zbudował bardzo wysokie wejście do domu.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p>La fase di caricamento dell'autobus era completata e tutti i passeggeri erano seduti. I venditori ambulanti continuarono a spingere per salire sull'autobus a vendere i loro prodotti ai passeggeri. Tutti urlavano i nomi dei prodotti che erano disponibili all'acquisto. Le parole suonavano buffe.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>Zbudował bardzo długie łóżko.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p>Alcuni passeggeri comprarono bevande, altri piccole merendine e cominciarono a masticarle. Quelli che non avevano soldi, come me, guardavano e basta.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>Kupił bardzo wysoki rower.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p>Queste azioni vennero interrotte dal fischio dell'autobus, il segno che eravamo pronti a partire. Il bagarino urlò ai venditori ambulanti di scendere.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>Siedział na bardzo wysokim krześle. I jadł bardzo długim widelcem.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p>I venditori ambulanti si spinsero a vicenda per farsi strada fuori dall'autobus. Alcuni diedero il resto ai viaggiatori. Altri tentarono di vendere altri prodotti all'ultimo minuto.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>Pewnego dnia opuścił swój dom i zamieszkał w obszernym lesie. Żył bardzo długo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p>Non appena l'autobus lasciò la fermata, io guardai fuori dal finestrino. Mi chiedevo se sarei mai tornato al mio villaggio.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="bardzo-wysoki-człowiek-1">Bardzo Wysoki Człowiek</h2>
-<strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p>Nel corso del viaggio, l'interno dell'autobus diventò molto caldo. chiusi gli occhi sperando di dormire.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p>Ma la mia testa si trasportò a casa. Mia madre starà bene? I miei conigli porteranno denaro? Mio fratello si ricorderà di innaffiare le mie piantine?</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p>Sulla strada, memorizzai il nome del posto in città dove viveva mio zio. Stavo ancora farfugliando quando mi addormentai.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p>Nove ore più tardi, mi svegliai con dei forti colpi e chiamate per i passeggeri in ritorno al mio villaggio. Afferrai il mio piccolo borsone e saltai giù dall'autobus.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p>L'autobus di ritorno si stava riempendo velocemente. Presto avrebbe fatto ritorno ad est. La cosa più importante per me ora, era cominciare a cercare la casa di mio zio.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="il-giorno-che-lasciai-casa-per-la-città-1">Il giorno che lasciai casa per la città</h2>
+<strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/very-tall-man'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/day-i-left-home-city'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
