--- a/stories/index.html
+++ b/stories/index.html
@@ -2045,6 +2045,12 @@
       <td><a name="it0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0324</td>
+      <td><a href="/stories/it/0324_il-giorno-che-lasciai-casa-per-la-città_slides.html" target="_blank">Il giorno che lasciai casa per la città</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0327</td>
       <td><a href="/stories/it/0327_contando-gli-animali_slides.html" target="_blank">Contando gli Animali</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5103,7 +5109,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#tl0324">tl</a>, <a href="#vi0324">vi</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
