--- a/stories/pl/0001_bardzo-wysoki-człowiek.html
+++ b/stories/pl/0001_bardzo-wysoki-człowiek.html
@@ -45,7 +45,7 @@
 
 <h1 id="bardzo-wysoki-czowiek">Bardzo Wysoki Człowiek</h1>
 
-Cornelius Gulere<br>English</div><div class="pagebreak">
+Cornelius Gulere<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
@@ -124,7 +124,7 @@ Cornelius Gulere<br>English</div><div class="pagebreak">
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> English</p>
+<p><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Aleksandra Migorska<br /><strong>Language:</strong> Polish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/very-tall-man">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
