--- a/stories/index.html
+++ b/stories/index.html
@@ -1877,6 +1877,12 @@
       <td><a name="it0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/it/0027_decisioni_slides.html" target="_blank">Decisioni</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/it/0030_sentimenti_slides.html" target="_blank">Sentimenti</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1965,6 +1971,12 @@
       <td><a href="/stories/it/0156_il-coccodrillo-affamato_slides.html" target="_blank">Il coccodrillo affamato</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="it0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/it/0158_gallina-e-aquila_slides.html" target="_blank">Gallina e Aquila</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0201</td>
@@ -4641,7 +4653,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -4887,7 +4899,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#it0158">it</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
